# wxocr

./: .gitignore  Dockerfile  README.md  docker-compose.yml  haproxy.cfg  main.py  pyproject.toml
.github/workflows/: docker-build.yml
src/wechat_ocr/: main.py
templates/: index.html
