[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wechat_ocr"]
include = [
    "src/wechat_ocr/wechat/**",
    "src/wechat_ocr/wcocr.cpython-312-x86_64-linux-gnu.so",
]

[project]
name = "wechat-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "py-cpuinfo>=9.0.0",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
]

[project.scripts]
wechat-ocr = "wechat_ocr.main:main"
